# SystemProgrammingWithCPP

./: .gitignore  .gitmodules
lab_1/: CMakeLists.txt  README.md  TBook.cpp  TBook.h  TIdMixin.cpp  TIdMixin.h  TLibrary.cpp  TLibrary.h  TUser.cpp  TUser.h  TWorker.cpp  TWorker.h  main.cpp
lab_1/Controllers/: TLibrary.cpp  TLibrary.h
lab_1/Error/: TAgeTooSmallException.cpp  TAgeTooSmallException.h  TGenderNoneException.cpp  TGenderNoneException.h  TIdException.cpp  TIdNotExistException.cpp  TIdNotExistException.h  TVariadicNumberException.h
lab_1/Errors/: TInvalidIdException.cpp  TInvalidIdException.h
lab_1/Helpers/: NNHelperFuncs.cpp  NNHelperFuncs.h  SOverloadVariant.h  SStringLiteral.h  SVariadicElementsString.h  TStringLiteral.h
lab_1/Models/: EGender.h  TBook.cpp  TBook.h  TIdMixin.cpp  TIdMixin.h  TUser.cpp  TUser.h  TUserBook.cpp  TUserBook.h  TWorker.cpp  TWorker.h
lab_1/Views/: TCustomCLI.cpp  TCustomCLI.h
lab_2/: CMakeLists.txt  Makefile  main.cpp  main.out
lab_2/dynamic_example/: Makefile  books.txt  export_dynamic.sh  main.cpp  main.out  users.txt  workers.txt
lab_2/include/: EGender.h  NNHelperFuncs.h  NNHelperFuncs.hpp  TAgeTooSmallException.h  TCustomCLI.hpp  TIdException.hpp  TIdMixin.hpp  TLibrary.h  TUser.hpp
lab_2/internal_lib/: Makefile  books.txt  main.out
lab_2/internal_lib/include/: TBook.hpp  TLibrary.hpp  TWorker.hpp
lab_2/internal_lib/src/: TBook.cpp  TCustomCLI.cpp  TIdMixin.cpp  TLibrary.cpp  TUser.cpp  TUserBook.cpp
lab_2/src/: NNHelperFuncs.cpp  TAgeTooSmallException.cpp  TBook.cpp  TCustomCLI.cpp  TIdException.cpp  TIdMixin.cpp  TLibrary.cpp  TUser.cpp  TUserBook.cpp  TWorker.cpp  main.cpp
lab_2/static_example/: Makefile  borrowed_books.txt  example.sh  main.cpp  main.out  workers.txt
lab_3/: CMakeLists.txt
lab_3/build-lab_3-Desktop_Qt_6_5_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  lab_3
lab_3/build-lab_3-Desktop_Qt_6_5_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-2e1c8df29ac5efde7ae5.json  codemodel-v2-27044b9b08ea24cd45bb.json  codemodel-v2-48c5612e86a66a408c21.json  directory-.-Debug-45b299d97f2b8f71d9dc.json  index-2023-09-24T13-59-55-0990.json  index-2023-09-24T16-05-36-0148.json  target-lab_3-Debug-38adf7198ba44b71a7ea.json
lab_3/build-lab_3-Desktop_Qt_6_5_2_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-5fe4aeb82afaafb4f6bc.json  codemodel-v2-b3dec7f653908d18946c.json  directory-.-Debug-2ec890e8f6e41763a0da.json  directory-.-Debug-d97c593cb50117d47ab1.json  index-2023-09-24T13-58-44-0976.json  target-lab_3-Debug-0644492bbe851e3db38f.json  target-lab_3-Debug-b9a59ac8b71d64cf6ccd.json  target-lab_3_autogen-Debug-aa92da1e9da32d10d447.json  target-lab_3_autogen_timestamp_deps-Debug-117829f1f78cfd5f699a.json
lab_3/build-lab_3-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
lab_3/build-lab_3-Desktop_Qt_6_5_2_GCC_64bit-Debug/lab_3_autogen/: deps  mocs_compilation.cpp
lab_3/build-lab_3-Desktop_Qt_6_5_2_GCC_64bit-Debug/lab_3_autogen/EWIEGA46WW/: moc_TMainWindow.cpp  moc_TMainWindow.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
lab_3/lab_3/: CMakeLists.txt  TMainWindow.cpp  TMainWindow.h  TQuestion.cpp  TQuestion.h  TQuestionsTest.cpp  TQuestionsTest.h  form.ui  main.cpp
lab_4/: .modules.order.cmd  Hello.c  Hello.ko  Hello.mod.c  Makefile  script.sh
lab_4/hello/: .Hello.ko.cmd  .Hello.mod.cmd  .Hello.mod.o.cmd  .Hello.o.cmd  .Module.symvers.cmd  Hello.mod  Makefile
lab_4/list/: .Module.symvers.cmd  .list.ko.cmd  .list.mod.cmd  .list.mod.o.cmd  .list.o.cmd  .list_module.ko.cmd  .list_module.mod.cmd  .list_module.mod.o.cmd  .list_module.o.cmd  (+8 more)
lab_5/: .Module.symvers.cmd  .cdev_module.ko.cmd  .cdev_module.mod.cmd  .cdev_module.mod.o.cmd  .cdev_module.o.cmd  .lab5.ko.cmd  .lab5.mod.cmd  .lab5.mod.o.cmd  .lab5.o.cmd  .modules.order.cmd  Makefile  README.md  cdev_module.c  cdev_module.ko  lab5.ko  lab5.mod  lab5.mod.c  modules.order  script.sh
(+2 files in other folders)
